<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="8dp">
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/forward_incoming_call"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:background="#323232"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/enable_forward_call"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/disable_forward_call"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">	    
	       <Button
	             android:id="@+id/set_forward_call"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/set_forward_call"
	             android:textSize="16sp">
	       </Button>
	       <Button
	             android:id="@+id/reset_forward_call"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/reset"
	             android:textSize="16sp">
	       </Button>
	    </LinearLayout>	    
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/forward_SMS"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:background="#323232"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/enable_forward_SMS"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/disable_forward_SMS"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">	    
	       <Button
	             android:id="@+id/set_forward_SMS"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/set_forward_SMS"
	             android:textSize="16sp">
	       </Button>
	       <Button
	             android:id="@+id/reset_forward_SMS"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/reset"
	             android:textSize="16sp">
	       </Button>
	    </LinearLayout>	    
	    
	</LinearLayout>
	<TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="8dp">
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lock_unlock"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:background="#323232"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lock_format"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/unlock_format"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	</LinearLayout>
	<TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="8dp">
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/SIMCardNotification"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    android:background="#323232"
	    >
	    </TextView>
         <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">	 	    
	       <Button
	             android:id="@+id/set_notification_number"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/Set_Notification_Number"
	             android:textSize="16sp">
	       </Button>
	       <Button
	             android:id="@+id/reset_notification_number"
	             android:layout_width="120sp"
	             android:layout_height="50sp"
	             android:text="@string/reset"
	             android:textSize="16sp">
	       </Button>
	     </LinearLayout>	  	       
	</LinearLayout>
	<TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
</LinearLayout>
