<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="4dip"
    android:paddingRight="4dip"
    android:paddingTop="4dip"
    android:paddingBottom="4dip">
    	<CheckBox
    	android:layout_width="80dp"
    	android:layout_height="40dp"
    	android:text="@string/start"
    	android:id="@+id/start_checkbox">
    	</CheckBox>
    	<LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	    	<LinearLayout
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    	<Button
		    	android:layout_width="110dp"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/scan_button"
		    	android:text="@string/scan_bt">
		    	</Button>
		    	<Button
		    	android:layout_width="110dp"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/RestConfig_button"
		    	android:text="@string/clear_bt">
		    	</Button> 
	    	</LinearLayout>  
	    	<LinearLayout
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    	<Button
		    	android:layout_width="110dp"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/scan_wlan_button"
		    	android:text="@string/scan_wlan">
		    	</Button>
		    	<Button
		    	android:layout_width="110dp"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/RestConfig_wlan_button"
		    	android:text="@string/clear_wlan">
		    	</Button> 
	    	</LinearLayout>    
    	</LinearLayout>  	
    </LinearLayout>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/remote_control"
	    android:id="@+id/message_control_textview"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/existing_bt"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/device_listview">
    </ListView>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/existing_wlan"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wlan_listview">
    </ListView>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/nearby_bt"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/deviceScanning_listview">
    </ListView> 
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/nearby_wlan"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/wlanScanning_listview">
    </ListView>
	<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	</TextView>
</LinearLayout>


